Fix layout overflow

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,5 +1,6 @@
 .container {
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   width: 100%;
   background-color: var(--page-bg-secondary);
 
