--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,7 @@
 .main {
   min-width: 100%;
-  height: calc(100% - 75px);
+  min-height: 100%;
+  height: auto;
   margin-top: 75px;
   padding: 50px;
 
