--- a/src/app/series/[id]/page.module.css
+++ b/src/app/series/[id]/page.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 75px;
+  margin: 100px 0 25px 0;
   width: 40%;
   min-width: 730px;
   height: 90%;
